<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="cash_in_hand">Cash in Hand</string>
	<string name="cash">Cash</string>
	<string name="wallet">Wallet</string>
	<string name="share_via">Share via</string>
	<string name="save">Save</string>
	<string name="spend">Spend</string>
	<string name="make_payment">Tap to make a payment</string>
	<string name="receive_money">Receive money</string>
	<string name="scan">Scan</string>
	<string name="balance">Balance</string>
	<string name="transactions">Transactions</string>
	<string name="view_history">View transaction history</string>
	<string name="pay">Pay</string>
	<string name="use_location">Use my location</string>
	<string name="notes">Notes</string>
	<string name="accept">Accept</string>
	<string name="withdraw">Withdraw</string>
	<string name="deposit">Deposit</string>
	<string name="nfc_read">NFC Read</string>
	<string name="nfc_push">NFC Push</string>
	<string name="qr_code_scan">QR Code Scan</string>
	<string name="qr_code">QR Code</string>
	<string name="treasury">Treasury</string>
	<string name="currency_sign">¤</string>
	<string name="treasury_selection">Treasury selection</string>
	<string name="withdraw_from">Withdraw from %s</string>
	<string name="empty_wallet">Your wallet is empty.</string>
	<string name="deposit_instructions">To receive money from someone, just tap the Deposit button.</string>
	<string name="withdraw_instructions">After you have a positive balance, you can make a payment by typing in an amount and tapping the Pay button.</string>
	<string name="download_required">Download Required</string>
	<string name="download_message">The %s application must be installed in order to continue. Download it now?</string>
	<string name="error_invalid_token">The token cannot be deposited because it is not in the correct format.</string>
	<string name="about">About</string>
	<string name="paste_from_clipboard">Paste from clipboard</string>
	<string name="copy_to_clipboard">Copy to clipboard</string>
	<string name="abandon">Abandon</string>
	<string name="refresh">Refresh</string>
</resources>
