<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
	<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
		<CheckBox android:text="@string/use_location" android:id="@+id/use_location" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true"></CheckBox>
		<Button android:text="@string/accept" android:id="@+id/accept_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_alignParentBottom="true"/>
		<EditText android:text="" android:id="@+id/notes" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="3" android:layout_above="@id/use_location"></EditText>
		<TextView android:text="@string/notes" android:id="@+id/notes_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@id/notes"></TextView>
        <TextView android:text="$0.00" android:id="@+id/dollar_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="40dip" android:layout_above="@id/notes_label"></TextView>
	</RelativeLayout>
</LinearLayout>
